--- a/index.html
+++ b/index.html
@@ -5,23 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <script src="game.js"></script>
+    <script src="game.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header></header>
     <div id="content">
 
-    <div class="gameboard">
-
-
-
-
-
-
-
-
-
-
+    <div class="game-board">
 
 
     </div>
