Add logic for choosing squares and switching player turns

--- a/index.html
+++ b/index.html
@@ -12,12 +12,24 @@
     <header></header>
     <div id="content">
 
+    <div class="game">
+        <div id="scoreboard">
+            <div id="turn-indicator">
+                <h2 id="turn-header">TURN:</h2>
+                <h3 id="turn-text"></h3>
+
+            </div>
+        </div>
     <div class="game-board">
 
 
     </div>
     </div>
+    </div>
       
+  
+
+</div>
     
     <footer></footer>
 </body>
