--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
 
     <div class="modal-container">
     <div class="create-game-modal">
-    
+        <div class="modal-exit" id="close-form"><input type="image" src="./img/window-close.svg" alt="close-form"></div>
         <h2 class="sub-header">Game Settings</h2>
         <form action="" id="create-game-form">
             <legend><label id="name-label" for="player_name">Player Name</label>
-                <input type="text" name="player_name" id="name_input" class="modal-input">
+                <input type="text" name="player_name" id="name_input" class="modal-input" required>
             </legend>
             <fieldset>
                 <legend><h2>Choose your side</h2>
                 </legend>
 
                 <label for="player_sideX">
-                    <input type="image" src="./img/x-box.svg" alt="Choose X" id="choose-X" class="game-letter-button" name="player_sideX">
+                    <input type="image" src="./img/x-box.svg" alt="Choose X" id="choose-X" class="game-letter-button selected-letter" name="player_sideX">
                 </label>
 
                 <label for="player_sideO">
-                    <input type="image" src="./img/o-box.svg" alt="Choose O" id="choose-O" class="game-letter-button" name="player_sideY">
+                    <input type="image" src="./img/o-box.svg" alt="Choose O" id="choose-O" class="game-letter-button" name="player_sideY" onclick="autofill();return false;">
                 </label>
             </fieldset>
             <fieldset id="difficulty-fieldset">
